# is-it-agentic-enough

./: .gitignore  API.md  PROFILES.md  README.md  SECURITY.md  batch.example.yaml  progress.md  pyproject.toml
batches/: batch.example.json
blog/: measuring-agentic-use.md
scripts/: clean_bucket.py  migrate_bucket.py  remove_model.py
src/ae/: batch.py  cli.py  dashboard.py  job.py  log.py  markers.py  matcher.py  paths.py  profile.py  report.py  run_suite.py  run_task.py  runners.py  runs.py  setup_commit.py  store.py  sync.py  transcript.py  upload.py
src/ae/data/: report.html  transformers.yaml
src/ae/profiles/: mock.py  transformers.py
src/ag/: __init__.py  analyze.py  batch.py  cli.py  compare.py  dashboard.py  explain.py  job.py  log.py  markers.py  matcher.py  paths.py  profile.py  report.py  run_suite.py  run_task.py  runners.py  setup_commit.py  store.py  sync.py  transcript.py  upload.py  util.py
src/ag/data/: report.html
src/ag/profiles/: __init__.py  mock.py  transformers.py
src/isth/: analyze.py  build_skill.py  cli.py  compare.py  dashboard.py  explain.py  job.py  log.py  paths.py  report.py  run_suite.py  run_task.py  runners.py  setup_commit.py  sync.py  transcript.py  upload.py
src/isth/data/: report.html  tasks.yaml
tests/: conftest.py  test_analyze.py  test_batch.py  test_integration_mock.py  test_markers.py  test_matcher.py  test_paths.py  test_profile.py  test_runs.py  test_transcript.py
