[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ag"
version = "0.1.0"
description = "A profile-based harness for running agentic-eval task suites and scoring against expected responses."
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Lysandre Debut", email = "hi@lysand.re" }]
dependencies = [
    "pyyaml>=6",
    "rich>=13",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
ag = "ag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ag"]

[tool.hatch.build.targets.wheel.force-include]
"src/ag/data" = "ag/data"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
